Bug 441894 - Encoding bug when displaying Graphics Processor information
Summary: Encoding bug when displaying Graphics Processor information
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: About this System (other bugs)
Version First Reported In: 5.22.5
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-02 07:24 UTC by wtl144000
Modified: 2021-09-03 09:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wtl144000 2021-09-02 07:24:03 UTC
SUMMARY

Program reports Graphics Processor's name incorrectly due to unicode bug or something.

OBSERVED RESULT

Graphics Processor: Mesa DRI Mobile Intel® GM45 Express Chipset

EXPECTED RESULT

Graphics Processor: Mesa DRI Mobile Intel® GM45 Express Chipset

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
(available in About System)
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.85.0
Qt Version: 5.12.2

ADDITIONAL INFORMATION
Comment 1 Harald Sitter 2021-09-02 09:43:54 UTC
Screenshot please.

Also, please post your `env`, `locale`, and `localectl` outputs.
Comment 2 wtl144000 2021-09-02 12:38:59 UTC
(In reply to Harald Sitter from comment #1)
> Screenshot please.
> 
> Also, please post your `env`, `locale`, and `localectl` outputs.

Sure:
screenshot: https://0x0.st/-vyn.png
env: https://0x0.st/-vyD.txt
locale: https://0x0.st/-pkA.txt
localectl: https://0x0.st/-vyk.txt
Comment 3 Harald Sitter 2021-09-02 12:40:42 UTC
Please always attach files to the bug report not some third party site. Third parties do lose data over time.
Comment 4 Harald Sitter 2021-09-02 12:45:14 UTC
What's curious is that it works correctly for the processor label, so whatever is wrong must already be wonky in the string coming out of opengl.

Please also get the output of
`glxinfo |grep -i 'opengl renderer'`

(though admittedly I'm not sure we'll see what's wrong from just that).
Comment 5 wtl144000 2021-09-02 17:15:51 UTC
(In reply to Harald Sitter from comment #4)
> What's curious is that it works correctly for the processor label, so
> whatever is wrong must already be wonky in the string coming out of opengl.
> 
> Please also get the output of
> `glxinfo |grep -i 'opengl renderer'`
> 
> (though admittedly I'm not sure we'll see what's wrong from just that).

The output from glxinfo is fine:

$ glxinfo |grep -i 'opengl renderer'
OpenGL renderer string: Mesa DRI Mobile Intel® GM45 Express Chipset (CTG)

That is why i thought something messed up the encoding.
Comment 6 Harald Sitter 2021-09-03 09:30:31 UTC
Thanks. Your hunch was correct, I see what's wrong now.
Comment 7 Harald Sitter 2021-09-03 09:35:27 UTC
Git commit 5ab22ea18fa05482e233a2b375eb83ad4d8a932c by Harald Sitter.
Committed on 03/09/2021 at 09:34.
Pushed by sitter into branch 'master'.

construct GL renderer string from unicode

as it turns out we wrongly assumed the value would be latin1 when indeed
the output may be unicode (e.g. include registered trademark symbols)
FIXED-IN: 5.23

M  +2    -3    Modules/about-distro/src/GPUEntry.cpp

https://invent.kde.org/plasma/kinfocenter/commit/5ab22ea18fa05482e233a2b375eb83ad4d8a932c