construct GL renderer string from unicode

as it turns out we wrongly assumed the value would be latin1 when indeed
the output may be unicode (e.g. include registered trademark symbols)

BUG: 441894
FIXED-IN: 5.23