Modules/about-distro/src/GPUEntry.cpp
@@ -1,7 +1,6 @@
 /*
     SPDX-FileCopyrightText: 2016 Rohan Garg <rohan@kde.org>
-
-    SPDX-FileCopyrightText: 2020 Harald Sitter <sitter@kde.org>
+    SPDX-FileCopyrightText: 2020-2021 Harald Sitter <sitter@kde.org>
     SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
 */
 
@@ -28,7 +27,7 @@ GPUEntry::GPUEntry()
     }
 
     if (context.makeCurrent(&surface)) {
-        m_value = QString::fromLatin1(reinterpret_cast<const char *>(context.functions()->glGetString(GL_RENDERER)));
+        m_value = QString::fromUtf8(reinterpret_cast<const char *>(context.functions()->glGetString(GL_RENDERER)));
         m_value = FancyString::fromUgly(m_value);
         // It seems the renderer value may have excess information in parentheses ->
         // strip that. Elide would probably be nicer, a bit meh with QWidgets though.
